# aura-memory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  mcp.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
.planning/: STATE.md
.planning/phases/06.2-epistemicruntime-maintain-maintenanceservice-rust/: 06.2-02-SUMMARY.md
articles/: aura-cognitive-memory-devto.md
docs/superpowers/plans/: 2026-05-20-aura-typescript-effect-layering-plan.md  2026-05-20-aura-typescript-port-m1.md  2026-05-20-aura-typescript-port-m2.md  2026-05-20-aura-typescript-port-m3-1.md  2026-05-20-aura-typescript-recall-first.md  2026-05-20-core-recall-facade.md  2026-05-20-platform-node-task3.md  2026-05-20-rust-ts-recall-parity.md  2026-05-20-typescript-codec-crypto.md
docs/superpowers/specs/: 2026-05-20-aura-typescript-effect-layering-design.md  2026-05-20-aura-typescript-port-design.md  2026-05-20-aura-typescript-recall-first-design.md  2026-05-22-aura-typescript-epistemic-layer-skeleton-design.md  2026-05-22-typescript-maintenance-belief-concept-causal-policy-design.md
examples/: colab_quickstart.ipynb  demo.py  demo_video.py
python/aura/: __init__.py  mcp_http.py  mcp_server.py
scripts/: check_release_version.py  python_release_smoke.py
src/: aura.rs  aura_state.rs  background_brain.rs  belief.rs  causal.rs  cognitive_store.rs  concept.rs  consequence.rs  consolidation.rs  context_capsule.rs  credibility.rs  evidence.rs  executable_judge.rs  lib.rs  maintenance_service.rs  mcp.rs  memory.rs  neighbor_mass.rs  ngram.rs  recall.rs  record.rs  research.rs  storage.rs  topology.rs
src/server/: handlers.rs
typescript/: .gitignore  AGENTS.md  AUDIT-DIFF.md  Agents.md  CLAUDE.md  EXPLAIN.md  README.md  README.zh.md  REPORT.md  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
typescript/.claude/: CLAUDE.md  settings.local.json
typescript/.claude/skills/contract-interface-pattern/: SKILL.md
typescript/.claude/skills/effect/: SKILL.md
typescript/.claude/skills/effect-project-pattern/: SKILL.md
typescript/.claude/skills/effect-ts/: SKILL.md
typescript/.codex/: config.toml
typescript/.codex/skills/effect/: SKILL.md
typescript/.codex/skills/effect-project-pattern/: SKILL.md
typescript/.codex/skills/effect-ts/: SKILL.md
typescript/.codex/skills/rust-ts-projection-pattern/: SKILL.md
typescript/.gsd/: CODEBASE.md
typescript/.gsd/graphs/: graph.json
typescript/.planning/: BACKLOG.md  IMPLEMENTATION-LOG.md  INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
typescript/.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
typescript/.planning/debug/review-phase7/: 07-claude-review.md  07-review-prompt.md
typescript/.planning/forensics/: report-20260529-233000.md
typescript/.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
typescript/.planning/intel/classifications/: 2026-05-20-aura-typescript-effect-layering-design-d28fea15.json  2026-05-20-aura-typescript-effect-layering-plan-140b528f.json  2026-05-20-aura-typescript-port-design-5fd8f34d.json  2026-05-20-aura-typescript-port-m1-b8fd860e.json  2026-05-20-aura-typescript-port-m2-e8f05e6d.json  2026-05-20-aura-typescript-port-m3-1-67984008.json  2026-05-20-aura-typescript-recall-first-design-23f05b5a.json  2026-05-20-aura-typescript-recall-first-df82a962.json  2026-05-20-core-recall-facade-b69ab5c3.json  2026-05-20-platform-node-task3-5f777181.json  2026-05-20-rust-ts-recall-parity-480f84a4.json  2026-05-20-typescript-codec-crypto-4c7eb249.json  2026-05-22-aura-typescript-epistemic-layer-skeleton-6d1f0534.json  2026-05-22-aura-typescript-epistemic-layer-skeleton-design-f4612aea.json  2026-05-22-cog-json-snapshot-helper-90675ad5.json  2026-05-22-core-aura-parity-skeleton-c549a8c1.json  2026-05-22-typescript-maintenance-belief-concept-causal-policy-design-3ea18eb4.json  2026-05-22-typescript-maintenance-epistemic-pipeline-5809a60c.json  AUDIT-DIFF.json  EXPLAIN.json
typescript/.planning/phases/06-maintenance-pipeline-completion/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-05-PLAN.md  06-05-SUMMARY.md  06-CONTEXT.md  06-LEARNINGS.md  06-RESEARCH.md  06-VALIDATION.md  06-VERIFICATION.md
typescript/.planning/phases/06.1-/: 06.1-01-PLAN.md  06.1-01-SUMMARY.md  06.1-CONTEXT.md  06.1-LEARNINGS.md
typescript/.planning/phases/06.2-epistemicruntime-maintain-maintenanceservice-rust/: 06.2-01-PLAN.md  06.2-01-SUMMARY.md  06.2-02-PLAN.md  (+20 more)
typescript/docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md
typescript/docs/zh/: ARCHITECTURE.zh.md  CONFIGURATION.zh.md  DEVELOPMENT.zh.md  GETTING-STARTED.zh.md  TESTING.zh.md
(+77 files in other folders)
