[package]
name = "aura"
version = "1.57.0"
edition = "2021"
authors = ["Alexander Tepliuk <aura@aurasdk.dev>"]
description = "Adaptive cognitive layer for AI agents. Sub-millisecond recall, zero LLM calls, pure Rust."
license = "MIT"
repository = "https://github.com/teolex2020/aura-memory"
homepage = "https://aurasdk.dev"
keywords = ["ai", "memory", "cognitive", "llm", "agent"]
categories = ["science", "algorithms"]

[lib]
name = "aura"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "aura-mcp"
path = "src/bin/aura-mcp.rs"
required-features = ["mcp"]

[[bin]]
name = "aura-dashboard"
path = "src/bin/aura-dashboard.rs"
required-features = ["server"]

[features]
default = ["full"]
full = ["python", "encryption", "server", "audit"]
python = ["pyo3"]
encryption = ["chacha20poly1305", "argon2", "zeroize"]
server = ["axum", "tower-http", "utoipa", "utoipa-swagger-ui", "metrics", "metrics-exporter-prometheus", "axum-server", "rust-embed", "mime_guess"]
audit = []
sync = ["crdts"]
mcp = ["rmcp", "schemars"]
embedded = ["encryption"]
lite = []
ffi = []
telemetry = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]

[dependencies]
# ============= CORE (Always included) =============
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Data Structures & Indexing
roaring = "0.10"
bitvec = "1.0"
dashmap = "6.0"

# Concurrency & System
parking_lot = "0.12"
memmap2 = "0.9"
byteorder = "1.5"
crossbeam-channel = "0.5"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Hashing
sha2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ahash = "0.8"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
crc32fast = "1"

# Text & Time
once_cell = "1"
regex = "1.10"
toml = "0.8"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"
rayon = "1"

# License
ctor = "0.2"
ed25519-dalek = { version = "2.1", features = ["std"] }
base64 = "0.21"

# Numerics (replaces numpy for SDR operations)
ndarray = "0.15"

# ============= OPTIONAL FEATURES =============

# Python Bindings
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }


# Server
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
utoipa = { version = "5", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "8", features = ["axum"], optional = true }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", features = ["http-listener"], optional = true }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }

# MCP Server
rmcp = { version = "0.8", features = ["server", "macros", "transport-io"], optional = true }
schemars = { version = "1.0", optional = true }

# Encryption
chacha20poly1305 = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }
zeroize = { version = "1.7", features = ["derive"], optional = true }

# P2P Sync
crdts = { version = "7.3", optional = true }

# Telemetry (OpenTelemetry)
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["tonic"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
