[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "aura-memory"
version = "1.5.6"
authors = [{name = "Alexander Tepliuk", email = "aura@aurasdk.dev"}]
description = "Adaptive cognitive layer for AI agents. Sub-millisecond recall, zero LLM calls, pure Rust."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["ai", "memory", "cognitive", "llm", "agent", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://aurasdk.dev"
Repository = "https://github.com/teolex2020/AuraSDK"
Documentation = "https://github.com/teolex2020/AuraSDK/blob/main/README.md"

[tool.maturin]
features = ["pyo3/extension-module", "encryption"]
python-source = "python"
module-name = "aura._core"
